# ntls-enclaves

./: .gitignore  README.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: common.yaml  todo.yml
common/: Cargo.toml
common/sealing/: Cargo.toml
common/sealing/src/: lib.rs
common/user-auth/: Cargo.toml
common/user-auth/src/: lib.rs
row-counter/: sample.json
row-counter/app/: Cargo.toml  Enclave_u.c  Enclave_u.h  pyproject.toml
row-counter/app/src/: lib.rs  main.rs
row-counter/enclave/: Cargo.toml  Enclave.edl  Enclave_t.c  Enclave_t.h  Makefile
row-counter/enclave/src/: lib.rs
sealing/app/: Cargo.toml  Enclave_u.c  Enclave_u.h  Makefile
sealing/app/src/: ecall.rs  lib.rs
sealing/enclave/: Cargo.toml  Enclave.edl  Enclave_t.c  Enclave_t.h  Makefile
sealing/enclave/src/: lib.rs
user-auth/: Makefile
user-auth/app/: Cargo.toml  Enclave_u.c  Enclave_u.h  build.rs  pyproject.toml
user-auth/app/src/: ecall.rs  lib.rs
user-auth/enclave/: Cargo.toml  Enclave.config.xml  Enclave.edl  Enclave_t.c  Enclave_t.h  Makefile
user-auth/enclave/src/: lib.rs
utils/: .gitignore  Makefile  README.md
utils/app/: Cargo.toml  Enclave_u.c  Enclave_u.h  Makefile  pyproject.toml
utils/app/src/: lib.rs
utils/enclave/: Cargo.toml  Enclave.edl  Enclave_t.c  Enclave_t.h  Makefile
utils/enclave/src/: lib.rs
xrpl-signer/: README.md
xrpl-signer/app/src/: ecall.rs
xrpl-signer/enclave/: Cargo.toml  Enclave.edl
xrpl-signer/enclave/src/: lib.rs
