[package]
name = "app"
version = "0.0.0"
build = "build.rs"
license = "AGPL-3.0-only"
edition = "2018"

[lib]
name = "utils"
crate-type = ["cdylib"]

[dependencies]
dotenvy_macro = "0.15"

# TODO: remove version pin when toolchain is v1.50+
[dependencies.pyo3]
version = "=0.16.2"
features = ["extension-module"]

[dependencies.sgx_types]
git = "https://github.com/apache/teaclave-sgx-sdk"
tag = "v1.1.3"

[dependencies.sgx_urts]
git = "https://github.com/apache/teaclave-sgx-sdk"
tag = "v1.1.3"

# TODO: remove this transitive dependency when toolchain is v1.56+
# ... latest version requires edition 2018
[dependencies.once_cell]
version = "=1.14.0"

# TODO: remove this transitive dependency when toolchain is nightly-2021-10-11+
[dependencies.proc-macro2]
version = "=1.0.43"

