[package]
name = "trusted"
version = "0.0.0"
edition = "2018"

[lib]
name = "trusted" # Library name. If you change this, please reflect those changes in the Makefile on the variable ENCLAVE_CARGO_LIB
crate-type = ["staticlib"]

[dependencies.blake3]
# TODO: remove version pin when toolchain is v1.59+
#version = "=1.3.1"
# TODO: remove version pin when toolchain is v1.51+
version = "=0.3.7"
default-features = false

[dependencies.sgx_tstd]
git = "https://github.com/apache/teaclave-sgx-sdk"
tag = "v1.1.3"

[dependencies.sgx_types]
git = "https://github.com/apache/teaclave-sgx-sdk"
tag = "v1.1.3"

[dependencies.serde_json]
version = "1"
default-features = false
features = ["alloc"]
